<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

  <SwitchPreferenceCompat
      app:key="autostart_on_boot"
      app:title="@string/autostart_on_boot"
      app:summary="@string/autostart_on_boot_summary"
      app:defaultValue="true" />

  <PreferenceCategory app:title="@string/limiting_header">

    <SwitchPreferenceCompat
        app:key="allow_lower"
        app:title="@string/allow_lower"
        app:summary="@string/allow_lower_summary"
        app:defaultValue="true" />

  </PreferenceCategory>

    <PreferenceCategory app:title="@string/password_header">
        <Preference
            app:key="password_settings_entry"
            app:title="@string/password_header"
            app:summary="@string/password_protected_summary" />
    </PreferenceCategory>

  <PreferenceCategory 
      app:title="@string/tv_settings_header"
      app:isPreferenceVisible="false">

    <SwitchPreferenceCompat
        app:key="hide_tv_launcher_icon"
        app:title="@string/hide_app_icon"
        app:summary="@string/hide_app_icon_summary"
        app:singleLineTitle="false"
        app:defaultValue="false" />

  </PreferenceCategory>

</PreferenceScreen>
